--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,25 @@
 @import "tailwindcss";
 :root {
-  --background: #f5f5f4; /* Cream BG */
-  --foreground: #2d2d2d; /* Charcoal text */
-
-  --primary: #ff6a8d; /* Light Pink */
-  /* --secondary: #cdb4db;  */
-  --secondary: #b8b5ff; /* Lavender */
-  --accent-1: #b8e0f5; /* Baby Blue */
-  --accent-2: #c6f1d6; /* Mint Green */
-  --muted-gray: #828487; /* Soft Gray */
+  --background: #f5f5f4;
+  --foreground: #2d2d2d;
+  --primary: #ff6a8d;
+  --secondary: #b8b5ff;
+  --accent-1: #b8e0f5;
+  --accent-2: #c6f1d6;
+  --muted-gray: #828487;
 }
 
 @theme inline {
-  --color-background: var(--background); /* Navbar BG */
-  --color-foreground: var(--foreground); /*text titles */
-
-  --color-primary: var(--primary); /* btn */
-  --color-secondary: var(--secondary); /*  hover*/
-  --color-accent-1: var(--accent-1); /* tag*/
-  --color-accent-2: var(--accent-2); /* chips*/
-  --color-muted: var(--muted-gray); /* paragraph*/
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+  --color-accent-1: var(--accent-1);
+  --color-accent-2: var(--accent-2);
+  --color-muted: var(--muted-gray);
   --font-heading: var(--font-geist-serif);
   --font-body: var(--font-inter-sans-serif);
+  --breakpoint-xs: 480px;
 }
 
 h1,
